--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {#{% form_theme form _self %}#}
 
@@ -174,9 +174,12 @@
     #welcome h1 span { display: block; font-size: 75%; }
     #icon-status, #icon-book { float: left; height: 64px; margin-right: 1em; margin-top: -4px; width: 64px; }
     #icon-book { display: none; }
+    .page-content {
+        padding: 10px 30px !important;
+    }
 
     @media (min-width: 768px) {
-        #wrapper { width: 80%; margin: 2em auto; }
+        #wrapper { width: 97%; margin: 2em auto; }
         #icon-book { display: inline-block; }
         #status a, #next a { display: block; }
 
