--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -17,6 +17,12 @@
     .site-menubar {
       z-index: 0 !important;
     }
+    #container{
+      min-height: 70vh;
+    }
+    [aria-live='polite'] {
+      position: relative !important;
+    }
   </style>
   {% block stylesheets %}{% endblock %}
 
