--- a/app/Resources/views/default/ustawienia.html.twig
+++ b/app/Resources/views/default/ustawienia.html.twig
@@ -16,6 +16,7 @@
             {{ form_row(form.nazwa) }}
             {{ form_row(form.miasto) }}
             {{ form_row(form.adres) }}
+            {{ form_row(form.kodPocztowy) }}
 
             <button class="btn btn-primary pull-right" style="float: right;" type="submit">Zapisz</button>
             {{ form_end(form) }}
